--- a/EZI-lucene/pom.xml
+++ b/EZI-lucene/pom.xml
@@ -21,9 +21,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Dependencies for zad1 -->
+
 		<!-- <dependency> <groupId>org.apache.lucene</groupId> <artifactId>lucene-core</artifactId> 
 			<version>2.2.0</version> </dependency> -->
 
+		<!-- Dependencies for zad2 -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
