--- a/LinearRegression/pom.xml
+++ b/LinearRegression/pom.xml
@@ -19,6 +19,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.14.8</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 </project>
