--- a/weka-api-intro/.classpath
+++ b/weka-api-intro/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/weka.jar" sourcepath="lib/weka-src.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-1.0.20.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
